name:                zehntausend
version:             0.1.0.0
synopsis:            A solver for the dice game Zehntausend.
-- description:
homepage:            http://david-peter.de/
license:             MIT
license-file:        LICENSE
author:              David Peter
maintainer:          mail@david-peter.de
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable zehntausend
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       MemoTrie == 0.6.2,
                       readline == 1.0.3.0,
                       binary == 0.7.1.0,
                       bytestring == 0.10.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010
